<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/icon"
        android:src="@drawable/img3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vocabText"
        style="@style/Base.V21.Theme.AppCompat"
        android:id="@+id/name"
        android:textColor="#FF3F59"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/icon"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toeflText"
        android:id="@+id/toefl"
        android:textSize="18sp"
        android:background="#ff6c303c"
        android:textAllCaps="false"
        android:layout_below="@+id/gre"
        android:layout_alignEnd="@+id/icon"
        android:layout_alignRight="@+id/icon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greText"
        android:id="@+id/gre"
        android:textSize="18sp"
        android:background="#ffb39a6d"
        android:textAllCaps="false"
        android:layout_below="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_marginTop="31dp"
        android:onClick="onClickGRE" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ieltsText"
        android:id="@+id/ielts"
        android:textSize="18sp"
        android:background="#ff809e6d"
        android:textAllCaps="false"
        android:layout_below="@+id/toefl"
        android:layout_alignLeft="@+id/name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satText"
        android:id="@+id/sat"
        android:textSize="18sp"
        android:background="#ffa78fa9"
        android:textAllCaps="false"
        android:layout_below="@+id/ielts"
        android:layout_alignEnd="@+id/icon"
        android:layout_alignRight="@+id/icon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actText"
        android:id="@+id/act"
        android:textSize="18sp"
        android:background="#ffcca351"
        android:textAllCaps="false"
        android:layout_below="@+id/sat"
        android:layout_alignStart="@+id/ielts"
        android:layout_alignLeft="@+id/ielts" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmatText"
        android:id="@+id/gmat"
        android:textSize="18sp"
        android:background="#ffee9e9e"
        android:textAllCaps="false"
        android:layout_below="@+id/act"
        android:layout_alignStart="@+id/toefl"
        android:layout_alignLeft="@+id/toefl" />

</RelativeLayout>